--- a/index.css
+++ b/index.css
@@ -3,13 +3,6 @@
     padding: 0;
 }
 
-body, html {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    overflow: hidden;  /* Prevents scrolling */
-}
-
 #mainHolder {
     background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
     height: 100vh;
@@ -232,30 +225,24 @@ span {
     background: linear-gradient(145deg, #232323, #2a2a2a);
 }
 
+/* Adding a hover effect to simulate a 3D press effect */
+#animTextHolder:hover {
+    transform: translateY(5px); /* Move it slightly down when hovered */
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2), 0 3px 3px rgba(0, 0, 0, 0.24); /* Reduce shadow size to simulate 'press' */
+}
+
 /* Optional: If you have any text directly inside `#animTextHolder`, give it a bit of text shadow for depth */
 #animTextHolder > p {
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
 }
 
-.bouncingMessage {
-    animation: bounce 1s infinite;
-    font-size: 1.5em;
-    text-align: center;
+#touchParticle {
+    position: fixed;
+    width: 40px;
+    height: 40px;
+    background-color: rgba(0,0,0,0.3);  /* This gives a shadow-like appearance */
+    border-radius: 50%;
+    pointer-events: none;  /* Ensure the particle doesn't interfere with other interactions */
+    transform: translate(-50%, -50%) scale(0);  /* Centered and initially hidden */
+    transition: transform 0.2s ease;
 }
-
-@keyframes bounce {
-    0%, 20%, 50%, 80%, 100% {
-        transform: translateY(0);
-    }
-    40% {
-        transform: translateY(-20px);
-    }
-    60% {
-        transform: translateY(-10px);
-    }
-}
-
-
-
-
-
