--- a/index.css
+++ b/index.css
@@ -26,8 +26,8 @@
     max-height: 80vh; /* Limit height to 80% of the viewport height */
 }
 
-.slide {
-    display: none;
+.slide:visible span {
+    animation: anim 1.2s cubic-bezier(0.23, 1, 0.32, 1) both;
 }
 
 span {
@@ -37,14 +37,10 @@ span {
 }
 
 @keyframes anim {
-    0%, 100% {
+    0% {
         opacity: 0;
     }
-    66% {
-        opacity: 1;
-        text-shadow: 0px 0px 20px #fff;
-    }
-    77% {
+    100% {
         opacity: 1;
     }
 }
@@ -212,6 +208,7 @@ span {
 }
 
 #animTextHolder {
+    font-family: 'Roboto', sans-serif;
     background-color: #262525;
     padding: 20px 30px;
     color: white;
@@ -245,4 +242,22 @@ span {
     pointer-events: none;  /* Ensure the particle doesn't interfere with other interactions */
     transform: translate(-50%, -50%) scale(0);  /* Centered and initially hidden */
     transition: transform 0.2s ease;
+}
+
+#swipeIcon {
+    position: fixed;
+    right: 50%; /* Start from the center of the screen */
+    bottom: 20px; /* Start from the bottom of the screen */
+    transform: translateX(50%); /* Adjust for the exact center */
+    width: 50px;
+    height: 50px;
+    background-color: #262525;
+    border-radius: 50%;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+    cursor: pointer;
+    transition: right 0.5s ease, bottom 0.5s ease;
+}
+
+#swipeIcon:hover {
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.4);
 }
