--- a/index.css
+++ b/index.css
@@ -110,24 +110,7 @@ span {
     color: white;
 }
 
-#shareButtons {
-    display: flex;
-    gap: 10px;
-    margin-top: 10px;
-}
 
-#shareButtons button {
-    background-color: #f5f7fa;
-    border: none;
-    padding: 5px 10px;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-
-#shareButtons button:hover {
-    background-color: #c3cfe2;
-}
 
 #previewHolder {
     position: fixed;
@@ -144,25 +127,6 @@ span {
     z-index: 2; /* Make sure it appears above other elements */
 }
 
-#shareButtons {
-    display: flex;
-    gap: 10px;
-    margin-top: 10px;
-    justify-content: center;
-}
-
-#shareButtons button {
-    background-color: #f5f7fa;
-    border: none;
-    padding: 5px 10px;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-
-#shareButtons button:hover {
-    background-color: #c3cfe2;
-}
 
 #savedTextHolder {
     position: fixed;
@@ -186,17 +150,6 @@ span {
     width: 60%; /* Making it smaller */
 }
 
-#shareButtons {
-    display: flex;
-    gap: 5px; /* Reduced gap for a more compact appearance */
-    margin-top: 10px;
-    justify-content: center;
-}
-
-#shareButtons button {
-    /* ... Previous styles ... */
-    padding: 3px 8px; /* Reduced padding for a smaller button size */
-}
 
 .icon {
     /* ... Previous styles ... */
@@ -262,6 +215,24 @@ span {
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.4);
 }
 
+#swipeIcon2 {
+    position: fixed;
+    right: 80%; /* Start from the center of the screen */
+    bottom: 50px; /* Start from the bottom of the screen */
+    transform: translateX(50%); /* Adjust for the exact center */
+    width: 50px;
+    height: 50px;
+    background-color: #262525;
+    border-radius: 0%;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+    cursor: pointer;
+    transition: right 0.5s ease, bottom 0.5s ease;
+}
+
+#swipeIcon2:hover {
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.4);
+}
+
 @keyframes bubbleAnimation {
     0% {
         transform: translateX(50%) scale(1);
@@ -277,6 +248,7 @@ span {
 #swipeIcon.animate {
     animation: bubbleAnimation 0.3s ease-in-out;
 }
+
 
 
 
