--- a/index.css
+++ b/index.css
@@ -3,6 +3,11 @@
     padding: 0;
 }
 
+body, html {
+    height: 100%;
+    overflow: hidden; /* Prevents scrolling */
+}
+
 #mainHolder {
     background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
     height: 100vh;
@@ -10,6 +15,8 @@
     justify-content: center;
     align-items: center;
     user-select: none;
+    position: relative;
+    overflow: hidden;
 }
 
 #animTextHolder {
@@ -249,6 +256,27 @@ span {
     animation: bubbleAnimation 0.3s ease-in-out;
 }
 
+.slide img {
+    width: 100%; 
+    max-height: 50vh;
+    object-fit: cover; 
+    border-radius: 5px; 
+    margin-bottom: 10px;
+}
 
+.image-holder {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
 
-
+.image-holder img {
+    max-width: 100%;
+    max-height: 80vh; /* Change this value based on how large you want the image relative to the viewport height */
+    object-fit: cover;
+}
