--- a/index.css
+++ b/index.css
@@ -10,7 +10,7 @@ body, html {
 
 #mainHolder {
     background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
-    height: 100vh;
+    height: -webkit-fill-available;
     display: flex;
     justify-content: center;
     align-items: center;
