--- a/index.css
+++ b/index.css
@@ -7,21 +7,19 @@
 
 #mainHolder {
     background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
-    height: 100vh;
+    height: calc(100vh - 70px); /* Subtract header height */
     display: flex;
     justify-content: center;
-    align-items: center;
     user-select: none;
     position: relative;
-    overflow: hidden;
 }
 
 #animTextHolder {
     font-family: 'Roboto', sans-serif;
     background-color: #262525;
-    padding: 20px 30px;
+    padding: 50px 30px;
     color: white;
-    margin: 20px;
+    margin: 0px;
     border-radius: 15px;
     position: relative;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
@@ -80,7 +78,7 @@ span {
 /* Desktop styles */
 @media only screen and (min-width: 651px) {
     #animTextHolder {
-        width: 70%;
+        width: 30%;
         overflow-y: visible;
         max-height: none;
     }
@@ -149,11 +147,12 @@ span {
 
 
 #animTextHolder {
+    
     font-family: 'Roboto', sans-serif;
     background-color: #262525;
-    padding: 20px 30px;
+    padding: 50px 30px;
     color: white;
-    margin: 20px;
+    margin: 0px;
     border-radius: 15px; /* Increased for a smoother curve */
     position: relative;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23); /* Added shadows for depth */
@@ -162,6 +161,12 @@ span {
     /* Optional: Add a subtle gradient for a more modern look */
     background: linear-gradient(145deg, #232323, #2a2a2a);
 }
+
+
+
+  #mainHolder {
+    height: calc(100vh - 70px - 50px); /* Subtract header and footer heights */  
+  }
 
 /* Adding a hover effect to simulate a 3D press effect */
 #animTextHolder:hover {
@@ -229,7 +234,7 @@ span {
 
 .slide img {
     width: 100%; 
-    max-height: 50vh;
+    max-height: 60vh;
     object-fit: cover; 
     border-radius: 5px; 
     margin-bottom: 10px;
@@ -284,3 +289,42 @@ body {
     background: linear-gradient(135deg, #83a4d4, #b6fbff);
 }
 
+
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+    background-color: #262525;
+    color: white;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000; /* Ensure header is always on top */
+}
+
+#logo {
+    font-size: 24px;
+    font-weight: bold;
+}
+
+#menuButton {
+    background: none;
+    border: none;
+    color: white;
+    font-size: 24px;
+    cursor: pointer;
+}
+
+  /* Increased Main Box Height */
+  #mainHolder {
+    height: calc(100vh - 120px);  
+  }
+
+
+  .items_holder {
+    overflow-y: auto;
+    max-height: 100%;
+  }
